deployment/workload.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  selector:
    matchLabels:
      app: www
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: www
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
      containers:
      - image: supporttools/website:BUILD_NUMBER
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 2
        name: www
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 8080
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /etc/nginx/client_body_temp
          name: cache-volume
        - mountPath: /etc/nginx/proxy_temp
          name: cache-volume
        - mountPath: /etc/nginx/fastcgi_temp
          name: cache-volume
        - mountPath: /etc/nginx/uwsgi_temp
          name: cache-volume
        - mountPath: /var/run
          name: cache-volume
      imagePullSecrets:
      - name: dockerhub-supporttools
      volumes:
      - emptyDir: {}
        name: cache-volume
