deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
  name: www
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: www
