deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: www
  name: supporttools-public-lb-test
spec:
  rules:
  - host: test-BUILD_NUMBER.support.tools
    http:
      paths:
      - backend:
          serviceName: www
          servicePort: 80
        pathType: ImplementationSpecific
